Ajuste de index etiquetas de más

--- a/index.html
+++ b/index.html
@@ -71,9 +71,19 @@
     consequat quam at, sodales justo.
   </p>
 
-  <h1></h1>
+  <p>
+    Aliquam semper aliquet tortor, <strong>nec euismod nibh semper a</strong>. Nam nulla diam, fringilla quis risus vel,
+    porttitor blandit nunc. Mauris vel orci accumsan, lacinia lacus id, consequat risus.
+    Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
 
-  <img>
 
+    Cras ac quam at lectus suscipit <em>pellentesque a vel dolor</em>. Duis eros odio, sollicitudin a erat elementum,
+    mollis finibus massa. Class aptent taciti sociosqu ad litora torquent per conubia nostra,
+    per inceptos himenaeos. <br /> <br /><br /> Quisque ipsum sapien, blandit id sagittis in, laoreet consectetur nulla.
+    Nunc at pulvinar lacus. Suspendisse tincidunt urna turpis, sed faucibus ipsum semper sed.
+    In luctus orci a auctor aliquam. Maecenas et justo ipsum. Sed auctor tempus magna eget dictum.
+    Donec velit neque, accumsan ac convallis eget, pulvinar at arcu. Ut eu quam interdum,
+    consequat quam at, sodales justo.
+  </p>
 </body>
 </html>
