cambios en index

--- a/index.html
+++ b/index.html
@@ -11,8 +11,14 @@
   <div> Esto es un contenedor de Bloque</div>
 
   <span>Esto es un contenedor de linea.</span>
-  <span>Esto es otro contenedor de linea.</span>
-  <span>Y esto es otro contenedor de linea.</span>
+
+  <div>
+    Dentro de un contenedor de Bloque puede haber un
+    <span>
+      contenedor de linea
+    </span>
+    y luego seguir escribiendo más texto.
+  </div>
 
   <div>
     Dentro de un contenedor de Bloque puede haber un
